2009-10-28  Dan Bernstein  <mitz@apple.com>

        Reviewed by Sam Weinig.

        Share code between the ATSUI- and Core Text-based Font implementations by doing the
        following:
        - Generalize CoreTextController as ComplexTextController, keeping the Core Text-specific
          parts in ComplexTextControllerCoreText.cpp.
        - Generalize FontMacCoreText as FontComplexTextMac using ComplexTextController
        - Implement ATSUI-specific parts of ComplexTextController in ComplexTextControllerATSUI.
        - Remove FontMacATSUI.

        * WebCore.xcodeproj/project.pbxproj: Removed CoreTextController.{cpp,h}, FontMacATSUI.mm,
        and FontMacCoreText.cpp, and added ComplexTextController.{cpp,h},
        ComplexTextControllerATSUI.cpp, ComplexTextControllerCoreText.cpp, and
        FontComplexTextMac.cpp.

        * platform/graphics/mac/ComplexTextController.cpp: Copied from CoreTextController.cpp and
        kept the non-Core Text-specific bits.
        (WebCore::ComplexTextController::ComplexTextController): Updated for renames, including
        its own.
        (WebCore::ComplexTextController::offsetForPosition): Updated for renames and for
        m_complexTextRuns holding references instead of objects.
        (WebCore::ComplexTextController::collectComplexTextRuns): Updated for renames, including
        its own.
        (WebCore::ComplexTextController::advance): Updated for renames.
        (WebCore::ComplexTextController::adjustGlyphsAndAdvances): Updated for renames and for
        m_complexTextRuns holding references instead of objects, and changed to use the glyphs()
        and advances() accessors.

        * platform/graphics/mac/ComplexTextController.h: Copied from CoreTextController.h and
        renamed CoreTextController to ComplexTextController and CoreTextRun to ComplexTextRun. Made
        the latter RefCounted, added ATSUI-specific members to it, and made some other members