@@ -437,7 +437,7 @@ WebInspector.Color.HexTable = {
     "B0C4DE": [[176, 196, 222], [214, 41, 78], "lightSteelBlue"],
     "B0E0E6": [[176, 224, 230], [187, 52, 80], "powderBlue"],
     "B22222": [[178, 34, 34], [0, 68, 42], "fireBrick"],
-    "B8860B": [[184, 134, 11], [43, 89, 38], "darkGoldenRod"],
+    "B8860B": [[184, 134, 11], [43, 89, 38], "darkGoldenrod"],
     "BA55D3": [[186, 85, 211], [288, 59, 58], "mediumOrchid"],
     "BC8F8F": [[188, 143, 143], [0, 25, 65], "rosyBrown"],
     "BDB76B": [[189, 183, 107], [56, 38, 58], "darkKhaki"],
@@ -451,7 +451,7 @@ WebInspector.Color.HexTable = {
     "D87093": [[219, 112, 147], [340, 60, 65], "paleVioletRed"],
     "D8BFD8": [[216, 191, 216], [300, 24, 80], "thistle"],
     "DA70D6": [[218, 112, 214], [302, 59, 65], "orchid"],
-    "DAA520": [[218, 165, 32], [43, 74, 49], "goldenRod"],
+    "DAA520": [[218, 165, 32], [43, 74, 49], "goldenrod"],
     "DC143C": [[237, 164, 61], [35, 83, 58], "crimson"],
     "DCDCDC": [[220, 220, 220], [0, 0, 86], "gainsboro"],
     "DDA0DD": [[221, 160, 221], [300, 47, 75], "plum"],
@@ -460,7 +460,7 @@ WebInspector.Color.HexTable = {
     "E6E6FA": [[230, 230, 250], [240, 67, 94], "lavender"],
     "E9967A": [[233, 150, 122], [15, 72, 70], "darkSalmon"],
     "EE82EE": [[238, 130, 238], [300, 76, 72], "violet"],
-    "EEE8AA": [[238, 232, 170], [55, 67, 80], "paleGoldenRod"],
+    "EEE8AA": [[238, 232, 170], [55, 67, 80], "paleGoldenrod"],
     "F08080": [[240, 128, 128], [0, 79, 72], "lightCoral"],
     "F0E68C": [[240, 230, 140], [54, 77, 75], "khaki"],
     "F0F8FF": [[240, 248, 255], [208, 100, 97], "aliceBlue"],
@@ -475,7 +475,7 @@ WebInspector.Color.HexTable = {
     "FA8072": [[250, 128, 114], [6, 93, 71], "salmon"],
     "FAEBD7": [[250, 235, 215], [34, 78, 91], "antiqueWhite"],
     "FAF0E6": [[250, 240, 230], [30, 67, 94], "linen"],
-    "FAFAD2": [[250, 250, 210], [60, 80, 90], "lightGoldenRodYellow"],
+    "FAFAD2": [[250, 250, 210], [60, 80, 90], "lightGoldenrodYellow"],
     "FDF5E6": [[253, 245, 230], [39, 85, 95], "oldLace"],
     "FF0000": [[255, 0, 0], [0, 100, 50], "red"],
     "FF00FF": [[255, 0, 255], [300, 100, 50], "magenta"],
